include(FetchContent)

# Externally provided libraries
FetchContent_Declare(googletest
        GIT_REPOSITORY https://github.com/google/googletest.git
        GIT_TAG v1.10.x)

FetchContent_Declare(googlebenchmark
        GIT_REPOSITORY https://github.com/google/benchmark.git
        GIT_TAG main) # need main for benchmark::benchmark

FetchContent_MakeAvailable(
        googletest
        googlebenchmark)

add_executable(${PROJECT_NAME}_benchmark OctreeBenchmark.cpp)
target_link_libraries(${PROJECT_NAME}_benchmark benchmark::benchmark ${PROJECT_NAME})
